# datascience-kb

./: Abstract - Data Quality.md  Abstract - Hands-On Machine Learning with Scikit-Learn and TensorFlow.md  CHANGELOG.md  README.md
Data Quality/: Abstract-Data-Quality-Concepts-Methodologies-&-Techniques.md
HandsOnMl/: Housing.ipynb  pyproject.toml
Python for Data Science and Machine Learning Bootcamp/: Python crash course.ipynb
Python for Data Science and Machine Learning Bootcamp/.ipynb_checkpoints/: My new notebook-checkpoint.ipynb
Python for Data Science and Machine Learning Bootcamp/01-Python-Crash-Course/: 02-Python Crash Course Exercises.ipynb  Mine Python crash course.ipynb
Python for Data Science and Machine Learning Bootcamp/01-Python-Crash-Course/.ipynb_checkpoints/: 02-Python Crash Course Exercises-checkpoint.ipynb  03-Python Crash Course Exercises - Solutions-checkpoint.ipynb  Mine Python crash course-checkpoint.ipynb
kaggle/Machine learning/: abstract.md
kaggle/Machine learning/notebooks/: exercise-categorical-variables.ipynb  exercise-cross-validation.ipynb  exercise-data-leakage.ipynb  exercise-missing-values.ipynb  exercise-pipelines.ipynb  exercise-xgboost.ipynb
kaggle/Your First Machine Learning Model/: abstract.md
kaggle/pandas/: abstract.md
machine-learning/code/: life_satisfaction.py  price_predictions.py
machine-learning/code/.ipynb_checkpoints/: Housing-checkpoint.ipynb
