[tool.poetry]
name = "handsonml"
version = "0.1.0"
description = ""
authors = ["Nicolás Marino <nicolasmarino.17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.1"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
